Fixed issue with the main content container not aligning properly. Temporary until a less hacky fix can be implemented.

--- a/src/main/webapp/css/main-content-general.css
+++ b/src/main/webapp/css/main-content-general.css
@@ -3,7 +3,7 @@
 .main {
 	overflow-x: hidden;
 	background-color: #548CA8;
-	margin-left: 16%; 
+	margin-left: 20%; 
 	font-size: 12px;
 	padding: 20px 10px;
 	height: 100%;
