--- a/src/main/webapp/css/sidenav.css
+++ b/src/main/webapp/css/sidenav.css
@@ -7,14 +7,14 @@ html, body {
 }
 
 .sidemain-container {
-	margin-top: 1%;
+	margin-top: 6%;
 	height: 100%;
 }
 
 .sidenav {
 	top: 14%;
 	height: 100%;
-	width: 16%; 
+	width: 20%; 
 	position: fixed;
 	z-index: 1;
 	background-color: #548CA8;
